<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp">

        <!-- Back Icon -->
        <ImageView
            android:id="@+id/doneButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_to_pantry"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <!-- Back Text -->
        <TextView
            android:id="@+id/doneButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_pantry"
            android:textSize="16sp"
            android:textColor="#333333"
            android:layout_toEndOf="@id/doneButton"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/itemNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/itemQuantityText"
        android:hint="@string/new_quantity"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/editButton"
        android:text="@string/edit_ingredient"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/errorText"
        android:textColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
