...
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ingredient_name"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Edit Icon -->
        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/edit_icon"
            android:src="@drawable/edit_icon"
            android:clickable="true"
...
